replaced whitespace placement with a div and fixed bottom wrapper content fade

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,13 @@ body {
 
 }
 
+#whitespace {
+
+	min-height:100px;
+	max-height:100px;
+
+}
+
 .contentfade {
 	
 	display:none;
